--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; font-family: sans-serif; background-color: #1e1e1e; color: #f0f0f0;}
-    #map, #sidebar, #basemap-switcher, #layer-editor, #route-editor { display: none; }
+    #map, #sidebar, #layer-editor, #route-editor { display: none; }
     #map { position: absolute; top: 0; left: 300px; right: 225px; bottom: 0; }
     #sidebar {
       position: absolute;
@@ -37,20 +37,6 @@
       flex: 1;
       border-top: 1px solid #444;
         padding-top: 8px; /* lub ile tam chcesz odstępu */
-    }
-    #basemap-switcher {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 200px;
-      height: 100%;
-      background-color: #2b2b2b;
-      border-color: #444;
-      color: #f0f0f0;
-      border-left: 1px solid #ccc;
-      padding: 10px;
-      overflow-y: auto;
-      font-size: 12px !important;
     }
     #history-log {
       border-top: 1px solid #444;
@@ -281,7 +267,7 @@ width: 15px;
 }
 
 /* Scrollbar dla Firefox */
-body, #sidebar, #basemap-switcher {
+body, #sidebar {
   scrollbar-width: thin;
   scrollbar-color: #555 #2a2a2a;
 }
@@ -561,7 +547,6 @@ body, #sidebar, #basemap-switcher {
   #map { left: 0 !important; right: 0 !important; }
   #sidebar { position: fixed; transform: translateX(-100%); transition: transform 0.3s ease; width: 260px; z-index: 1500; }
   #sidebar.show { transform: translateX(0); }
-  #basemap-switcher { display: none; }
   #narzedzia { left: 10px; top: 140px; }
   #geosearch-container { left: 10px; right: 10px; top: 90px; }
   #gpsFollowBtn {
@@ -684,22 +669,8 @@ img.emoji {
   </div>
   <div id="map"></div>
   <button id="toggleLayers">☰ Warstwy</button>
-  <div id="basemap-switcher">
-    <h3>Rodzaj mapy</h3>
-    <label><input type="radio" name="basemap" value="osm"> Mapa podstawowa</label><br>
-    <label><input type="radio" name="basemap" value="esri" checked> Esri World Imagery</label><br>
-    <label><input type="radio" name="basemap" value="gibs"> NASA GIBS (Blue Marble)</label><br>
-    <label><input type="radio" name="basemap" value="gugik"> Geoportal GUGiK ortofotomapa</label><br>
-    <label><input type="radio" name="basemap" value="osmHybrid"> OpenStreetMap hybryda</label><br>
-    <label><input type="radio" name="basemap" value="hill"> Cieniowanie + miasta + drogi</label><br>
-    <label><input type="radio" name="basemap" value="hist"> Mapa historyczna (Geoportal)</label>
-
-    <h3>Widok ulic</h3>
-    <label><input type="radio" name="streets" value="full" checked> Wszystkie ulice</label><br>
-    <label><input type="radio" name="streets" value="main"> Tylko główne trasy</label><br>
-    <label><input type="radio" name="streets" value="none"> Brak ulic</label><br>
-
-    <div id="route-controls">
+  <!-- Poprzedni przełącznik mapy usunięty; warstwy wybierane są przez Leaflet layer control -->
+  <div id="route-controls">
       <h3>Wyznacz trasę</h3>
       <input type="text" id="routeStart" placeholder="Punkt początkowy"><br>
       <input type="text" id="routeEnd" placeholder="Punkt końcowy"><br>
@@ -913,9 +884,6 @@ function slugify(str) {
       document.getElementById("ekran-logowania").style.display = "none";
       document.getElementById("map").style.display = "block";
       document.getElementById("sidebar").style.display = "block";
-      if (window.innerWidth > 700) {
-        document.getElementById("basemap-switcher").style.display = "block";
-      }
       initMap();
       loadLayersFromFirestore().then(() => {
         if (window.innerWidth <= 700) {
@@ -939,8 +907,9 @@ function slugify(str) {
       });
     });
 
-    let map, baseLayer, routingLayer, roadsLayer;
-    let currentBase = 'esri';
+    let map, routingLayer;
+    // ustaw na true aby korzystać z lokalnego proxy dla zapytań WMS (CORS)
+    const USE_PROXY = false;
     let loadingCount = 0;
     function showLoading() {
       const el = document.getElementById('loading');
@@ -958,6 +927,25 @@ function slugify(str) {
     let wszystkiePinezki = [];
     let draggedLayer = null;
     let highlightedItem = null;
+
+    // dzisiejsza data w formacie YYYY-MM-DD (lokalnie, bez internetu)
+    function todayDate() {
+      return new Date().toISOString().split('T')[0];
+    }
+
+    // sprawdzenie odpowiedzi dla kafelków i czytelne logi
+    function checkTile(type, url) {
+      fetch(url, { method: 'HEAD' })
+        .then(resp => {
+          const ct = resp.headers.get('content-type');
+          if (!resp.ok || (type === 'WMS' && (!ct || !ct.includes('image/png')))) {
+            console.error(`[${type}]`, url, 'status', resp.status, 'content-type', ct);
+          }
+        })
+        .catch(err => {
+          console.warn(`[${type}]`, url, 'prawdopodobny CORS - włącz proxy', err);
+        });
+    }
     let zmianyDoZapisania = {};
     let nowePinezki = [];
     let localPinsLoaded = false;
@@ -1695,88 +1683,56 @@ function emojiHtml(str) {
         map.panBy(offset, { animate: true });
       });
 
-      const sat = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-        attribution: 'Esri'
-      });
-      const hill = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Elevation/World_Hillshade/MapServer/tile/{z}/{y}/{x}', {
-        attribution: 'Esri',
-        className: 'hillshade-dark'
-      });
-      const hist = L.tileLayer.wms('https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO_ARCH/MapServer/WMSServer', {
-        layers: 'Raster',
-        format: 'image/png',
-        transparent: false,
-        version: '1.3.0',
-        crs: L.CRS.EPSG3857,
-        attribution: 'Geoportal.gov.pl \u2013 ortofotomapa historyczna'
-      });
+      // --- warstwy bazowe i nakładki ---
       const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors'
+        attribution: '© OpenStreetMap contributors'
       });
-      const labels = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Boundaries_and_Places/MapServer/tile/{z}/{y}/{x}');
-      const roadsFull = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Transportation/MapServer/tile/{z}/{y}/{x}');
-      const roadsSimple = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Transportation/MapServer/tile/{z}/{y}/{x}', { maxNativeZoom: 12, maxZoom: 18 });
-      const today = new Date().toISOString().split('T')[0];
-      const gibs = L.tileLayer(`https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/BlueMarble_ShadedRelief/default/${today}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.jpg`, {
-        attribution: 'NASA Blue Marble',
-        maxZoom: 9,
-        maxNativeZoom: 9
-      });
-      const gugik = L.tileLayer.wms('https://mapy.geoportal.gov.pl/wss/service/ORTO/MapServer/WMSServer', {
-        layers: 'Raster',
+
+      // WMTS/XYZ z NASA GIBS
+      let nasaLayerName = 'MODIS_Terra_CorrectedReflectance_TrueColor'; // łatwa podmiana warstwy
+      const nasa = L.tileLayer(
+        'https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/{layer}/default/{time}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.jpg',
+        {
+          layer: nasaLayerName,
+          time: todayDate(), // dzisiejsza data
+          attribution: 'Imagery © NASA GIBS',
+          maxZoom: 9,
+          maxNativeZoom: 9
+        }
+      );
+
+      // opcjonalny proxy dla Geoportalu
+      const GEOPORTAL_ENDPOINT = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/StandardResolution';
+      const wmsUrl = USE_PROXY ? `/wms-proxy?url=${encodeURIComponent(GEOPORTAL_ENDPOINT)}` : GEOPORTAL_ENDPOINT;
+
+      const geoportal = L.tileLayer.wms(wmsUrl, {
+        layers: 'ORTOFOTOMAPA',
         format: 'image/png',
-        transparent: false,
-        version: '1.3.0',
-        crs: L.CRS.EPSG3857,
-        attribution: 'Geoportal.gov.pl – ortofotomapa'
-      });
-      const osmOverlay = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors',
-        opacity: 0.5
+        transparent: true,
+        version: '1.1.1',
+        attribution: '© Geoportal, GUGiK'
       });
 
-      baseLayer = sat;
-      baseLayer.on('loading', showLoading);
-      baseLayer.on('load', hideLoading);
-      baseLayer.addTo(map);
-      labels.addTo(map);
-      roadsLayer = roadsFull;
-      roadsLayer.addTo(map);
+      // logi dla błędów wczytywania kafelków
+      nasa.on('tileerror', e => checkTile('WMTS', e.tile.src));
+      geoportal.on('tileload', e => checkTile('WMS', e.tile.src));
+      geoportal.on('tileerror', e => checkTile('WMS', e.tile.src));
 
-      document.querySelectorAll('input[name="basemap"]').forEach(radio => {
-        radio.addEventListener('change', () => {
-          map.removeLayer(baseLayer);
-          baseLayer.off('loading', showLoading);
-          baseLayer.off('load', hideLoading);
-          if (map.hasLayer(osmOverlay)) map.removeLayer(osmOverlay);
-          baseLayer = (radio.value === 'esri') ? sat :
-                      (radio.value === 'gibs') ? gibs :
-                      (radio.value === 'gugik') ? gugik :
-                      (radio.value === 'hill') ? hill :
-                      (radio.value === 'hist') ? hist :
-                      (radio.value === 'osmHybrid') ? sat : osm;
-          baseLayer.on('loading', showLoading);
-          baseLayer.on('load', hideLoading);
-          baseLayer.addTo(map);
-          map.removeLayer(labels);
-          if (roadsLayer) map.removeLayer(roadsLayer);
-          if (radio.value === 'osmHybrid') {
-            osmOverlay.addTo(map);
-          } else if (radio.value !== 'osm') {
-            labels.addTo(map);
-            if (roadsLayer) roadsLayer.addTo(map);
-          }
-          currentBase = radio.value;
-        });
-      });
+      const baseLayers = {
+        'OSM': osm,
+        'NASA (True Color)': nasa
+      };
 
-      document.querySelectorAll('input[name="streets"]').forEach(radio => {
-        radio.addEventListener('change', () => {
-          if (roadsLayer) map.removeLayer(roadsLayer);
-          roadsLayer = (radio.value === 'main') ? roadsSimple :
-                       (radio.value === 'full') ? roadsFull : null;
-          if (currentBase !== 'osm' && currentBase !== 'osmHybrid' && roadsLayer) roadsLayer.addTo(map);
-        });
+      const overlays = {
+        'Geoportal Orto (WMS)': geoportal
+      };
+
+      L.control.layers(baseLayers, overlays, { collapsed: false }).addTo(map);
+      osm.addTo(map);
+
+      [osm, nasa, geoportal].forEach(l => {
+        l.on('loading', showLoading);
+        l.on('load', hideLoading);
       });
     map.on("click", e => { if (currentTool === "pin" && !drawingRoute && window.innerWidth > 800) onMapClick(e); });
     map.on(L.Draw.Event.CREATED, onRouteCreated);
